[tool.poetry]
name = "python-flask"
version = "0.1.0"
description = "Minimal python flask api"
authors = ["Anderson F Lima <andersonfaustinolima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
